# rag-code-challenge

./: .env.example  .pre-commit-config.yaml  Assistant.py  README.md  api.py  pyproject.toml  shell_assistant.py
brainsoft_code_challenge/: agent.py  config.py  constants.py  files.py  scraping.py  serp_api.py  splitting.py  streamlit_interface.py  tokenizer.py  utils.py  vector_store.py  web_search.py
brainsoft_code_challenge/data_loading/: scraping.py  splitting.py
brainsoft_code_challenge/tools/: code_interpreter.py  documentation_search.py  web_search.py
data/pytest/: scraped_docs.json  test_file.csv
scripts/: evaluate.py  rebuild_chromadb.py  scrape_documentation.py  split_documentation.py
tests/: test_agent.py  test_api.py  test_data_loading.py  test_scraping.py  test_shell_assistant.py  test_streamlit.py  test_tokenizer.py  test_utils.py
