[tool.poetry]
name = "brainsoft-code-challenge"
version = "0.0.1"
description = ""
authors = ["Vojtech Cahlik <vojtech@cahlik.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.0.2"
langchain = "^0.1.10"
langchain-openai = "^0.0.8"
streamlit = "^1.31.1"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
